added index-header css file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Furniture for <br>Home & Office</title>
+    <link rel="stylesheet" href="css/index-header.css">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
         <article class="main-page">
             <h1><span>Furniture</span> for Home & Office</h1>
             <p>500+ models of cushioned furniture, lamps and accessories.</p>
-            <button class="green-black-btn">Best-Selling Products</button>
+            <button class="green-black-btn">Best-Selling Products ⤑</button>
         </article>
     </header>
     <main>
@@ -37,17 +38,17 @@
             <div class="tables-cabinets">
                 <img src="img/white-green-room.jpg" alt="Room in white and green color">
                 <h3><span>15% off</span> on Tables & Cabinets</h3>
-                <p>Learn more</p>
+                <p>Learn more ⤑</p>
             </div>
             <div class="white-collection">
                 <img src="img/white-room.jpg" alt="Room in white color">
                 <h3>All-White Collection in Store</h3>
-                <p>Learn more</p>
+                <p>Learn more ⤑</p>
             </div>
             <div class="modern-collection">
                 <img src="img/children-room.jpg" alt="Children room in modern style">
                 <h3><span>New!</span> Modern Collection by ARM</h3>
-                <p>Learn more</p>
+                <p>Learn more ⤑</p>
             </div>
         </section>
         <section class="collection-title">
@@ -80,7 +81,7 @@
         <section class="spring-collection-title">
             <h2>Spring <span>2020</span><br>collection</h2>
             <p>Best styles for your home or office in the most trending colors of 2020.<br> Shop cushioned furniture, lamps, coffee tables and accessories here.</p>
-            <button class="green-black-btn">Our faves</button>
+            <button class="green-black-btn">Our faves ⤑</button>
         </section>
         <section class="wood-and-black-interior">
             <div class="wood-interior">
@@ -88,14 +89,14 @@
                 <p>Bring brightness to the interior</p>
                 <h4>Get 15% off on colorful 2020 furniture collections.</h4>
                 <p>Set bright accents in your interior.<br> Shop the collections of selected designers.</p>
-                <button class="green-black-btn">Learn more</button>
+                <button class="green-black-btn">Learn more ⤑</button>
             </div>
             <div class="black-interior">
                 <img src="img/interier-black.jpg" alt="Black interior">
                 <p>Black & white are always in trend </p>
                 <h4>Only black and white furniture collections.<br>Nothing extra.</h4>
                 <p>Top models of furniture & lamps.<br> Find your inspiration in our B&W collections.</p>
-                <button class="green-white-btn">Learn more</button>
+                <button class="green-white-btn">Learn more ⤑</button>
             </div>
         </section>
         <section class="shop" id="collection">
@@ -125,7 +126,7 @@
                     <h2>Colorfull Collections by KUKO</h2>
                     <p>KUKO is one of the new-wave furniture manufacturers. They are located in California, USA. Inspired by the sun and ocean, they create unique products bringing joy to your home or office. Our store presents the best KUKO sofas and armchairs
                         from the collections of 2018-2020.</p>
-                    <button class="nav-btn"><a href="#collection">Shop Kuko</a></button>
+                    <button class="nav-btn"><a href="#collection">Shop Kuko ⤑</a></button>
                 </div>
                 <div class="image-kuko">
                     <img src="img/yellow-sofa.jpg" alt="Yellow sofa">
@@ -140,7 +141,7 @@
                     <h2>Classics by Landstrom Design</h2>
                     <p>Landstrom Design, founded in Copenhagen, creates universal pieces of cushioned furniture. Its sofas and armchairs look good in any interior styles, from minimalism to shabby chic. Such furniture will never go out of style and will
                         catch the eye of your guests.</p>
-                    <button class="nav-btn"><a href="#collection">Shop Landstrom</a></button>
+                    <button class="nav-btn"><a href="#collection">Shop Landstrom ⤑</a></button>
                 </div>
             </div>
         </section>
@@ -269,9 +270,11 @@
         </section>
     </footer>
 
-
+    
 
 
 </body>
 
 </html>
+
+---→
