fixed validator's bugs

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#blog">Blog</a></li>
                     <li><a href="#contact">Contact Us</a></li>
-                </ul>
-                <button class="nav-btn"><a href="#shop">Shop now</a></button>
+                <li class="nav-btn"><a href="#shop">Shop now</a></li>
+            </ul>
             </div>
         </nav>
         <article class="main-page">
@@ -62,19 +62,19 @@
                     <img src="img/gray-lord-armchair.png" alt="Lord armchair gray color">
                     <h3>Lord armchair, Miedel Home</h3>
                     <p>$120,00 USD</p>
-                    <button class="order green-black-btn" ">Order now</button>
+                    <button class="order green-black-btn">Order now</button>
            </div>
-           <div class="ultimate-chair ">
-               <img src="img/green-ultimate-chair.png " alt="Ultimate Green Chair ">
+           <div class="ultimate-chair">
+               <img src="img/green-ultimate-chair.png" alt="Ultimate Green Chair ">
                <h3>Ultimate Green chair, XODO</h3>
                <p>$90,00 USD</p>
                <button class="order green-black-btn ">Order now</button>
                 </div>
-                <div class="valetta-armchair ">
-                    <img src="img/pink-valetta-armchair.png " alt="Valetta pink armchair ">
+                <div class="valetta-armchair">
+                    <img src="img/pink-valetta-armchair.png" alt="Valetta pink armchair ">
                     <h3>Valetta armchair, ZIX studio</h3>
                     <p>$310,00 USD</p>
-                    <button class="order green-black-btn " ">Order now</button>
+                    <button class="order green-black-btn">Order now</button>
                 </div>
             </article>
         </section>
@@ -117,6 +117,7 @@
             </div>
         </section>
         <section class="carousel-logotypes">
+            <h4>carousel logotypes</h4>
             <img src="img/ikea-logo.png" alt="Ikea logotype">
         </section>
         <section class="top-brands">
@@ -126,7 +127,7 @@
                     <h2>Colorfull Collections by KUKO</h2>
                     <p>KUKO is one of the new-wave furniture manufacturers. They are located in California, USA. Inspired by the sun and ocean, they create unique products bringing joy to your home or office. Our store presents the best KUKO sofas and armchairs
                         from the collections of 2018-2020.</p>
-                    <button class="nav-btn"><a href="#collection">Shop Kuko ⤑</a></button>
+                    <p class="nav-btn"><a href="#collection">Shop Kuko ⤑</a></p>
                 </div>
                 <div class="image-kuko">
                     <img src="img/yellow-sofa.jpg" alt="Yellow sofa">
@@ -141,7 +142,7 @@
                     <h2>Classics by Landstrom Design</h2>
                     <p>Landstrom Design, founded in Copenhagen, creates universal pieces of cushioned furniture. Its sofas and armchairs look good in any interior styles, from minimalism to shabby chic. Such furniture will never go out of style and will
                         catch the eye of your guests.</p>
-                    <button class="nav-btn"><a href="#collection">Shop Landstrom ⤑</a></button>
+                    <p class="nav-btn"><a href="#collection">Shop Landstrom ⤑</a></p>
                 </div>
             </div>
         </section>
@@ -207,7 +208,7 @@
         <section class="contact" id="contact">
             <div class="contact-form">
                 <div class="form-container">
-                    <form action="" method="POST">
+                    <form  method="POST">
                         <input type="text" name="fullname" id="fullname" placeholder="Enter your full name*">
                         <input type="tel" name="phone" id="phone" placeholder="Enter your phone number*">
                         <input type="email" name="e-mail" id="email" placeholder="Enter your e-mail*">
@@ -238,7 +239,7 @@
         </section>
     </main>
     <footer>
-        <section class="nav-bar-footer">
+        <div class="nav-bar-footer">
             <div class="white-logo">
                 <img src="img/white-logo-sofa.png" alt="Company's logotype">
                 <p>We sell designer furniture, lamps & decor across the USA. We offer the best collections by American and European designers.</p>
@@ -267,14 +268,11 @@
                 </form>
                 <button class="subscribe green-white-btn">Subscribe</button>
             </div>
-        </section>
+        </div>
     </footer>
 
     
 
 
 </body>
-
 </html>
-
----→
