delete action in form 266 column

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </div>
             <div class="newsletter">
                 <p>Join our newsletter for $30 off</p>
-                <form action="" method="POST">
+                <form  method="POST">
                     <input type="email" name="e-mail" id="email-footer" placeholder="Email*">
                 </form>
                 <button class="subscribe green-white-btn">Subscribe</button>
