added css for header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Furniture for <br>Home & Office</title>
+    <title>Furniture for Home & Office</title>
     <link rel="stylesheet" href="css/index-header.css">
 </head>
 
@@ -14,6 +14,7 @@
         <nav>
             <div class="logo">
                 <img src="img/logo.png" alt="Company's logotype">
+                <button class="open-btn" id="open"><span>☰</span></button>
             </div>
             <div class="nav-bar">
                 <ul>
@@ -28,7 +29,7 @@
             </div>
         </nav>
         <article class="main-page">
-            <h1><span>Furniture</span> for Home & Office</h1>
+            <h1><span>Furniture</span> for  Home & Office</h1>
             <p>500+ models of cushioned furniture, lamps and accessories.</p>
             <button class="green-black-btn">Best-Selling Products ⤑</button>
         </article>
