added css to part of main

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Furniture for Home & Office</title>
     <link rel="stylesheet" href="css/index-header.css">
+    <link rel="stylesheet" href="css/index-main.css">
 </head>
 
 <body>
@@ -86,14 +87,12 @@
         </section>
         <section class="wood-and-black-interior">
             <div class="wood-interior">
-                <img src="img/wood-back-img.jpg" alt="Wood interior">
                 <p>Bring brightness to the interior</p>
                 <h4>Get 15% off on colorful 2020 furniture collections.</h4>
                 <p>Set bright accents in your interior.<br> Shop the collections of selected designers.</p>
                 <button class="green-black-btn">Learn more ⤑</button>
             </div>
             <div class="black-interior">
-                <img src="img/interier-black.jpg" alt="Black interior">
                 <p>Black & white are always in trend </p>
                 <h4>Only black and white furniture collections.<br>Nothing extra.</h4>
                 <p>Top models of furniture & lamps.<br> Find your inspiration in our B&W collections.</p>
