added change in css

--- a/index.html
+++ b/index.html
@@ -96,17 +96,18 @@
                 <p>Black & white are always in trend </p>
                 <h4>Only black and white furniture collections.<br>Nothing extra.</h4>
                 <p>Top models of furniture & lamps.<br> Find your inspiration in our B&W collections.</p>
-                <button class="green-white-btn">Learn more ⤑</button>
+                <button class="green-black-btn">Learn more ⤑</button>
             </div>
         </section>
         <section class="shop" id="collection">
             <h2>Our Fave Finds</h2>
             <p>The best designer products from the 2020 collections.</p>
             <div class="furniture-sections">
-                <p>Armchairs</p>
-                <p>Lamps</p>
-                <p>Tables</p>
+                <button class="armchairs">Armchairs</button>
+                <button class="lamps">Lamps</button>
+                <button class="tables">Tables</button>
             </div>
+            <hr>
             <div class="shop-range">
                 <article>
                     <img src="img/yellow-fusion-armchair.png" alt="Fusion yellow armchair">
