added products JSON, added index.js

--- a/index.html
+++ b/index.html
@@ -108,14 +108,7 @@
                 <button class="tables">Tables</button>
             </div>
             <hr>
-            <div class="shop-range">
-                <article>
-                    <img src="img/yellow-fusion-armchair.png" alt="Fusion yellow armchair">
-                    <h3>Fusion armchair, LEXX</h3>
-                    <p>$320,00 USD</p>
-                    <button class="order nav-btn">Order now</button>
-                </article>
-            </div>
+            <div class="shop-range"></div>
         </section>
         <section class="carousel-logotypes">
             <h4>carousel logotypes</h4>
@@ -274,6 +267,6 @@
 
     
 
-
+<script src="js/index.js"></script>
 </body>
 </html>
