added cs to file

--- a/index.html
+++ b/index.html
@@ -111,8 +111,15 @@
             <div class="shop-range"></div>
         </section>
         <section class="carousel-logotypes">
-            <h4>carousel logotypes</h4>
-            <img src="img/ikea-logo.png" alt="Ikea logotype">
+            <!--Carousel LOGO-->
+            <div><img src="img/idea-logo.png" alt="idea-logo"></div>
+            <div><img src="img/art-van-logo.png" alt="art-van-logo"></div>
+            <div><img src="img/ikea-logo.png" alt="ikea-logo"></div>
+            <div><img src="img/vitra-logo.png" alt="vitra-logo"></div>
+            <div><img src="img/walmart-logo.png" alt="walmart-logo"></div>
+            <div><img src="img/kronheims-logo.png" alt="kronheims-logo"></div>
+            <div><img src="img/seamans-logo.png" alt="seamans-logo"></div>
+            <!--Carousel LOGO-->
         </section>
         <section class="top-brands">
             <div class="kuko-collection">
